fix Makefile and add symlink

--- a/assignment-1/jlex/Makefile
+++ b/assignment-1/jlex/Makefile
@@ -1,2 +1,10 @@
+all: lexer
+
+Main.class: Main.java
+	javac Main.java
+
+sample: Main.class
+	java -classpath . JLex.Main example.lex
+
 clean:
 	rm -rf *.class
