start working on s-expression lexer

--- a/assignment-1/jlex/Makefile
+++ b/assignment-1/jlex/Makefile
@@ -12,5 +12,14 @@ Sample.class: sample.lex.java
 run_sample: Sample.class
 	java Sample
 
+SExpr.lex.java: JLex/Main.class SExpr.lex
+	java -classpath . JLex.Main SExpr.lex
+
+SExpr.class: SExpr.lex.java
+	javac -d . SExpr.lex.java
+
+run_s_expr: SExpr.class
+	java SExpr
+
 clean:
-	rm -rf JLex/*.class sample.lex.java *.class
+	rm -rf JLex/*.class sample.lex.java SExpr.lex.java *.class
