--- a/assignment-2/cups-example/Makefile
+++ b/assignment-2/cups-example/Makefile
@@ -1,7 +1,7 @@
 JARLIB = ${HOME}/cs143/lib
 
-CUPJARS = ${JARLIB}java-cup-11a.jar:${JARLIB}/java-cup-11a-runtime.jar
-CUP := ${HOME}/cs143/bin/java_cup_11a
+# CUPJARS = ${JARLIB}java-cup-11a.jar:${JARLIB}/java-cup-11a-runtime.jar
+# CUP := ${HOME}/cs143/bin/java_cup_11a
 
 CUPJARS = ${JARLIB}java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
 CUP := ${HOME}/cs143/bin/java_cup_11b
