trying to make the trivial parser run

--- a/assignment-2/cup-trivial/Makefile
+++ b/assignment-2/cup-trivial/Makefile
@@ -1,13 +1,18 @@
-JARLIB = ${HOME}/cs143/lib
+JARLIB = ${HOME}/src/foreign/cup/target/dist
 
-CUPJARS = ${JARLIB}java-cup-11a.jar:${JARLIB}/java-cup-11a-runtime.jar
-CUP := ${HOME}/cs143/bin/java_cup_11a
+# CUPJARS = ${JARLIB}/java-cup-11a.jar:${JARLIB}/java-cup-11a-runtime.jar
+# CUP := ${HOME}/cs143/bin/java_cup_11a
 
-# CUPJARS = ${JARLIB}java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
-# CUP := ${HOME}/cs143/bin/java_cup_11b
+CUPJARS = ${JARLIB}/java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
+CUP := ${HOME}/cs143/bin/java_cup_11b
 
 Parser.java: trivial.cup Makefile
-	${CUP} -parser Parser -expect 10000 -dump -nopositions < trivial.cup > trivial.output 2>&1
+	java -cp \
+		${JARLIB}/java-cup-11b.jar \
+		java_cup.Main \
+		-parser Parser \
+		-expect 10000 \
+		-dump -nopositions < trivial.cup > trivial.output 2>&1
 
 parser: Parser.java Trivial.class Makefile
 	@rm -f parser
