the trivial example seems to be working, working on calc

--- a/assignment-2/cup-example/Makefile
+++ b/assignment-2/cup-example/Makefile
@@ -1,13 +1,15 @@
-JARLIB = ${HOME}/cs143/lib
+JARLIB = ${HOME}/src/foreign/cup/target/dist
 
-# CUPJARS = ${JARLIB}java-cup-11a.jar:${JARLIB}/java-cup-11a-runtime.jar
-# CUP := ${HOME}/cs143/bin/java_cup_11a
-
-CUPJARS = ${JARLIB}java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
+CUPJARS = ${JARLIB}/java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
 CUP := ${HOME}/cs143/bin/java_cup_11b
 
 Parser.java: calc.cup Makefile
-	${CUP} -parser Parser -expect 10000 -dump -nopositions < calc.cup > calc.output 2>&1
+	java -cp \
+		${JARLIB}/java-cup-11b.jar \
+		java_cup.Main \
+		-parser Parser \
+		-expect 10000 \
+		-dump -nopositions < calc.cup > calc.output 2>&1
 
 parser: Parser.java Calc.class Makefile
 	@rm -f parser
