working on parser for s-expressions

--- a/assignment-2/s-expressions-parser/Makefile
+++ b/assignment-2/s-expressions-parser/Makefile
@@ -3,13 +3,13 @@ JARLIB = ${HOME}/src/foreign/cup/target/dist
 CUPJARS = ${JARLIB}/java-cup-11b.jar:${JARLIB}/java-cup-11b-runtime.jar
 CUP := ${HOME}/cs143/bin/java_cup_11b
 
-Parser.java: trivial.cup Makefile
+Parser.java: s-expressions.cup Makefile
 	java -cp \
 		${JARLIB}/java-cup-11b.jar \
 		java_cup.Main \
 		-parser Parser \
 		-expect 10000 \
-		-dump -nopositions < trivial.cup > trivial.output 2>&1
+		-dump -nopositions < s-expressions.cup > s-expressions.output 2>&1
 
 parser: Parser.java Trivial.class Makefile
 	@rm -f parser
@@ -17,12 +17,14 @@ parser: Parser.java Trivial.class Makefile
 	echo 'java -classpath ${CUPJARS}:`dirname $$0` Main $$*' >> parser
 	chmod 755 parser
 
+SExprLexer.lex.java: JLex/Main.class SExprLexer.lex
+	java -classpath . JLex.Main SExprLexer.lex
 
-Trivial.class: Trivial.java Makefile
+S-Expressions.class: S-Expressions.java Makefile
 	javac -cp ${CUPJARS}:. *.java
 
 clean:
-	rm -rf *.class Parser.java sym.* parser trivial.output
+	rm -rf *.class Parser.java sym.* parser s-expressions.output
 
 debug:
 	jdb -classpath ${CUPJARS}:. Main
